@@ -1,61 +1,76 @@
 package service;
 
-import model.Book;
-import Repository.BookRepository;
 import exception.InvalidInputException;
+import model.Book;
+import Repository.AuthorRepository;
+import Repository.BookRepository;
+import Repository.interfaces.CrudRepository;
 
 import java.util.List;
 
 public class BookService {
 
-    private final BookRepository repository = new BookRepository();
+    private final CrudRepository<Book> bookRepo;
+    private final AuthorRepository authorRepo;
+
+    public BookService(CrudRepository<Book> bookRepo, AuthorRepository authorRepo) {
+        this.bookRepo = bookRepo;
+        this.authorRepo = authorRepo;
+    }
 
     public void create(Book book) {
-        validate(book);
-        repository.create(book);
+        validateBook(book);
+        bookRepo.create(book);
     }
 
     public List<Book> getAll() {
-        return repository.getAll();
+        return bookRepo.getAll();
     }
 
     public Book getById(int id) {
-        if (id <= 0) {
-            throw new InvalidInputException("ID must be greater than 0");
-        }
-        return repository.getById(id);
+        if (id <= 0) throw new InvalidInputException("ID must be greater than 0");
+        return bookRepo.getById(id);
     }
 
     public void update(int id, Book book) {
-        if (id <= 0) {
-            throw new InvalidInputException("ID must be greater than 0");
-        }
-        validate(book);
-        repository.update(id, book);
+        if (id <= 0) throw new InvalidInputException("ID must be greater than 0");
+        validateBook(book);
+        bookRepo.update(id, book);
     }
 
     public void delete(int id) {
-        if (id <= 0) {
-            throw new InvalidInputException("ID must be greater than 0");
-        }
-        repository.delete(id);
+        if (id <= 0) throw new InvalidInputException("ID must be greater than 0");
+        bookRepo.delete(id);
+    }
+    public List<Book> getAllSortedByPrice() {
+        List<Book> books = bookRepo.getAll();
+        books.sort((b1, b2) -> Double.compare(b1.getPrice(), b2.getPrice()));
+        return books;
     }
 
-    private void validate(Book book) {
-        if (book == null) {
-            throw new InvalidInputException("Book cannot be null");
-        }
 
-        if (book.getName() == null || book.getName().trim().isEmpty()) {
-            throw new InvalidInputException("Book name cannot be empty");
+    public List<Book> getByAuthor(String authorName) {
+        if (authorName == null || authorName.isBlank()) {
+            throw new InvalidInputException("Author name cannot be empty");
         }
-
-        if (book.getPrice() <= 0) {
-            throw new InvalidInputException("Price must be greater than 0");
+        if (!(bookRepo instanceof BookRepository br)) {
+            throw new InvalidInputException("Repository does not support findByAuthor");
         }
+        return br.findByAuthor(authorName);
+    }
 
-        if (book.getAuthor() == null) {
+    private void validateBook(Book book) {
+        if (book == null) throw new InvalidInputException("Book cannot be null");
+        try {
+            book.validate(book);
+        } catch (IllegalArgumentException e) {
+            throw new InvalidInputException("Invalid book data");
+        }
+        if (book.getAuthor() == null || book.getAuthor().getId() <= 0) {
             throw new InvalidInputException("Author is required");
+        }
+        if (!authorRepo.existsById(book.getAuthor().getId())) {
+            throw new InvalidInputException("Author does not exist in DB");
         }
     }
 }
